// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <div
    class="feature-card"
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="nan"
                >
                  NaN
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h2>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            >
              <h1
                class="typography__text typography__text--section typography__link typography--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <div
    class="feature-card"
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="23-30"
                >
                  23-30
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="dec"
                >
                  Dec
                </h2>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            >
              <h1
                class="typography__text typography__text--section typography__link typography--no-padding"
                id="untitled-blog-(deleted)"
              >
                Untitled blog (DELETED)
              </h1>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <div
    class="feature-card"
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="23-30"
                >
                  23-30
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="dec"
                >
                  Dec
                </h2>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            >
              <h1
                class="typography__text typography__text--section typography__link typography--no-padding"
                id="st-ives--2018"
              >
                St Ives  2018
              </h1>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="feature-card test-custom-classname"
    role="button"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
        style="background-image: url(null);"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="nan"
                >
                  NaN
                </h2>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="typography__main typography__link typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography__link typography--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h2>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            >
              <h1
                class="typography__text typography__text--section typography__link typography--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan"
                  >
                    NaN
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
        />
      </div>
    </div>
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan"
                  >
                    NaN
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
        />
      </div>
    </div>
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
    <div
      class="feature-card blogs-list__card"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <div
      class="feature-card blogs-list__card blogs-list__card--with-controls"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="nan"
                  >
                    NaN
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
        />
      </div>
    </div>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive blogs-list__control"
      type="button"
    >
      Delete blog
    </button>
    <div
      class="feature-card blogs-list__card blogs-list__card--with-controls"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive blogs-list__control"
      type="button"
    >
      Delete blog
    </button>
    <div
      class="feature-card blogs-list__card blogs-list__card--with-controls"
      role="button"
      style="cursor: pointer;"
      tabindex="0"
    >
      <div
        class="card"
      >
        <div
          class="card__background"
          style="background-image: url(null);"
        />
        <div
          class="card__outer-container card__outer-container--padded"
        >
          <div
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h2>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="typography__main typography__link typography--no-padding"
                >
                  <h2
                    class="typography__text typography__text--subsection typography__link typography--no-padding"
                    id="dec"
                  >
                    Dec
                  </h2>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="typography__main typography--no-padding feature-card__title"
              >
                <h1
                  class="typography__text typography__text--section typography__link typography--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h1>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="tag__outer"
                >
                  <span
                    class="tag tag--travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card__banner"
          style="background-color: rgb(1, 87, 155);"
        />
      </div>
    </div>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive button__outer--disabled blogs-list__control"
      disabled=""
      type="button"
    >
      Delete blog
    </button>
  </div>
</div>
`;
